// -*- mode: protobuf; indent-tabs-mode: t; c-basic-offset: 8; tab-width: 8 -*-
syntax = "proto3";

package chef.automate.domain.ocid;
option go_package = "github.com/chef/automate/api/config/ocid";

import "config/shared/global.proto";
import "config/shared/tls.proto";
import "automate-grpc/protoc-gen-a2-config/api/a2conf/annotations.proto";
import "google/protobuf/wrappers.proto";

message ConfigRequest {
  option (chef.automate.api.service_config) = {name: "automate-cs-ocid"};

	V1 v1 = 1;

	message V1 {
		System sys = 1;
		Service svc = 2;

		message System {
			chef.automate.infra.config.Mlsa mlsa = 1;
			Log log = 2;
			Network network = 3;
			Sql sql = 4;
			Ocid ocid = 5;
			chef.automate.infra.config.TLSCredentials tls = 6;

			message Network {
				google.protobuf.Int32Value port = 1 [ (chef.automate.api.port) = { name: "service", default: 10114, protocol: "https" } ];
				google.protobuf.StringValue listen_ip = 2 [deprecated=true]; // The listen host is no longer setable(localhost only)
			}

			message Log {
				google.protobuf.StringValue level = 1;
				google.protobuf.Int64Value rotation_max_bytes = 2;
				google.protobuf.Int32Value rotation_max_files = 3;
				google.protobuf.Int32Value max_error_logs_per_second = 4;
			}

			message Sql {
				google.protobuf.Int32Value timeout =  1;
				google.protobuf.Int32Value pool_init_size = 2;
				google.protobuf.Int32Value pool_max_size = 3;
				google.protobuf.Int32Value pool_queue_max = 4;
				google.protobuf.Int32Value pool_queue_timeout = 5;
			}

			message Ocid {
				ChefServerConfig chef_server_config = 1;
				OauthApplicationConfig oauth_application_config = 2;
				google.protobuf.StringValue secret_key_base = 3;

				message ChefServerConfig {
					google.protobuf.StringValue endpoint = 1;
					google.protobuf.StringValue superuser = 2;
					google.protobuf.StringValue ssl_verify_mode = 3;
				}

				message OauthApplicationConfig {
					repeated OauthApplication oauth_applications = 1;

					message OauthApplication {
						google.protobuf.StringValue name = 1;
						google.protobuf.StringValue redirect_uri = 2;
					}
				}
			}
    }
		message Service {}
	}
}