syntax = "proto3";

package chef.automate.domain.session;
option go_package = "github.com/chef/automate/api/config/session";

import "config/shared/global.proto";
import "config/shared/tls.proto";
import "automate-grpc/protoc-gen-a2-config/api/a2conf/annotations.proto";
import "google/protobuf/wrappers.proto";


message ConfigRequest {
	option (chef.automate.api.service_config) = {name: "session-service"};

	reserved 1 to 2;
	V1 v1 = 3;

	message V1 {
		System sys = 1;
		Service svc = 2;

		message System {
			reserved 1 to 3;

			chef.automate.infra.config.Mlsa mlsa = 4;
			Service service = 5;
			chef.automate.infra.config.TLSCredentials tls = 6;
			Oidc oidc = 7;
			Storage storage = 8;
			Logger logger = 9;

			message Service {
				google.protobuf.StringValue host = 1 [deprecated=true]; // The listen host is no longer setable(localhost only)
				google.protobuf.Int32Value port = 2 [ (chef.automate.api.port) = { name: "service", default: 10115, protocol: "https" } ];
				google.protobuf.StringValue signin_url = 3;
				google.protobuf.StringValue external_fqdn = 4;
				google.protobuf.StringValue bldr_signin_url = 5;
				google.protobuf.StringValue bldr_client_id = 6;
				google.protobuf.StringValue bldr_client_secret = 7;

				google.protobuf.BoolValue persistent = 8;
				google.protobuf.Int32Value grpc_port = 9 [ (chef.automate.api.port) = { name: "grpcservice", default: 10108, protocol: "grpc" } ];
			}

			message Oidc {
				google.protobuf.StringValue client_id = 1;
				google.protobuf.StringValue client_secret = 2;
				google.protobuf.StringValue redirect_url = 3;
			}

			message Storage {
				reserved 3 to 4;
				google.protobuf.StringValue database = 1;
				google.protobuf.StringValue user = 2;
			}

			message Logger {
				google.protobuf.StringValue format = 1;
				google.protobuf.StringValue level = 2;
			}
		}

		message Service {
			//DataLifecycleServiceConfig.BackupRepo backup = 1;
		}
	}
}
