syntax = "proto3";

package chef.automate.domain.infra_proxy.request;
option go_package = "github.com/chef/automate/api/interservice/infra_proxy/request";

message AutomateInfraServerUsers {
    // Automate Infra Server ID.
    string server_id = 1;
}

message AutomateInfraOrgUsers {
    // Automate Infra Server ID.
    string server_id = 1;
    // Automate Infra Org ID.
    string org_id = 2;
}

message ResetInfraServerUserKeyReq {
    // Chef Server User's Id
    string user_id = 1;
    // Chef Server Username
    string user_name = 2;
    // Chef Server Id
    string server_id = 3;
}
